--- a/src/components/card-add-form/cardAddForm.module.css
+++ b/src/components/card-add-form/cardAddForm.module.css
@@ -3,12 +3,14 @@
 .cardAddForm {
   margin-bottom: 2em;
   width: 80%;
+  height: 30em;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.36);
 }
 
 .form {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 .firstLine {
   display: flex;
@@ -29,12 +31,16 @@
   padding: 0.5em;
 }
 .file {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   flex-basis: 20%;
   border: 2px solid makerBlack;
 }
 .fileInputBtn {
   cursor: pointer;
   width: 100%;
+  height: 100%;
   height: 2.2em;
   background-color: makerBlack;
   color: makerWhite;
@@ -48,10 +54,29 @@
   border: 2px solid makerBlack;
   border-top: 0;
   padding: 0.5em;
+  height: 90%;
 }
 .addBtn {
   height: 2em;
   font-size: 1.2em;
   background-color: makerBlack;
   color: makerWhite;
+}
+.loading {
+  position: absolute;
+  width: 1.3em;
+  height: 1.3em;
+  border: 2px solid makerBlack;
+  border-top: 2px solid makerWhite;
+  border-radius: 50%;
+  animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
