--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,3 +1,5 @@
+@value makerWhite, makerBlack, makerColorful from '../../common/colors.css';
+
 .card {
   display: flex;
   flex-direction: row;
@@ -5,13 +7,17 @@
   width: 80%;
   padding: 1em;
   padding-top: 2em;
-  height: 14em;
+  height: 30em;
   margin-bottom: 1.8em;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.36);
 }
 .cardText {
   flex-basis: 70%;
   text-align: center;
+  margin-top: 4em;
+}
+.pre {
+  white-space: pre-wrap;
 }
 .quote {
   font-size: 1.5em;
@@ -19,5 +25,26 @@
 }
 .author {
   font-size: 1em;
-  margin-top: 2em;
+  margin-top: 5em;
+}
+.img {
+  width: 10em;
+  height: 10em;
+  border-radius: 50%;
+  margin-top: 5em;
+  margin-right: 2em;
+  filter: grayscale();
+}
+
+.card.white {
+  background-color: makerWhite;
+  color: makerBlack;
+}
+.card.black {
+  background-color: makerBlack;
+  color: makerWhite;
+}
+.card.colorful {
+  background: makerColorful;
+  color: makerBlack;
 }
