--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,4 +1,8 @@
-@value makerWhite, makerBlack, makerColorful from '../../common/colors.css';
+@font-face {
+  font-family: "Merriweather";
+  src: url("../../common/font/Merriweather-LightItalic.ttf");
+}
+@value makerWhite, makerBlack, makerColorful from "../../common/colors.css";
 
 .card {
   display: flex;
@@ -9,27 +13,28 @@
   padding-top: 2em;
   height: 30em;
   margin-bottom: 1.8em;
-  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.36);
+  box-shadow: 10px 10px 5px 0px rgba(27, 16, 16, 0.36);
+  border-radius: 10px;
 }
 .cardText {
   flex-basis: 70%;
   text-align: center;
-  margin-top: 4em;
+  margin-top: 6em;
 }
 .pre {
   white-space: pre-wrap;
+  font-family: "Merriweather";
 }
 .quote {
-  font-size: 1.5em;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1.7em;
 }
 .author {
   font-size: 1em;
   margin-top: 5em;
 }
 .img {
-  width: 10em;
-  height: 10em;
+  width: 13em;
+  height: 13em;
   border-radius: 50%;
   margin-top: 5em;
   margin-right: 2em;
